# AlgoLab1

./: .gitignore  CMakeLists.txt  README.md
include/MergeSort/: MergeSort.h
src/: Convert.cpp  Convert.h  MergeSort.cpp  main.cpp
test/: MergeSortTest.cpp
